    view of the current edit.
  * Add diff highlighting for the portion of the line that changed (if any),
    similar to Mediawiki.
  * Allow an alternate file name to be specified as the "Destination Filename"
    when uploading, similar to Mediawiki.
  * Add links to the edited section in edit summaries on recent changes,
    history, etc, similar to Mediawiki.
  * Implement caching for diffs and topic versions to speed up page rendering.
  * Upgrade to JFlex 1.4.3.
  * Upgrade to JSTL standard taglib 1.1.2.
  * Upgrade to Lucene Search 2.4.1.
  * Upgrade to ehcache 1.6.0-beta3.

Bugfixes:

  * Update Spring Security configuration to remove reliance on the deprecated
    FilterInvocationDefinitionSourceEditor class.
  * Fix the Bliki local Maven repository metadata to resolve build warnings.


0.7.1
=====

Bugfixes:

  * Search by login on the Special:Roles page returned no results for users
    without at least one role.  Reported by tapaya and rebecca.
  * Fix incorrect LDAP sample configuration.  Reported with a fix by Tobias
    Kalbitz.

Translation Updates:

  * Updated German translations (axelclk).


0.7.0
=====

New Features:

  * Login and authentication completely rewritten to take better advantage
    of Spring Security capabilities.
  * Special:OrphanedPages added to display un-linked pages (hanspeterklapf).
  * Remove ability to automatically upgrade from versions prior to 0.5.0.
  * "Next" and "prev" diff links added to Special:History to match Mediawiki.
  * Number of characters changed in a diff is now displayed on recent changes,
    history and other pages to match Mediawiki.
  * Signficant (5-10x or more) performance improvement of image rendering by
    making better use of cache.  Suggestions from Jim.
  * Allow users to create custom signatures, rather than using the same
    signature pattern for all users.
  * Modify Special:Specialpages so that it is localized for each visitor,