@@ -68,9 +68,9 @@ MANUAL UPGRADES
 Manual upgrades should only be performed if an error occurs while upgrading
 JAMWiki automatically.  When upgrading manually, you should perform all
 upgrade steps sequentially for each version that is being upgraded,  unless
-otherwise noted.  For example, if upgrading from version 0.5.0 to version
-0.5.3, you should apply the upgrade steps for 0.5.1, followed by 0.5.2,
-followed by 0.5.3.
+otherwise noted.  For example, if upgrading from version 0.6.0 to version
+0.6.3, you should apply the upgrade steps for 0.6.1, followed by 0.6.2,
+followed by 0.6.3.
 
   JAMWiki 0.8.0
   =============
